--- a/front_student/package.json
+++ b/front_student/package.json
@@ -14,28 +14,25 @@
     "@types/redux-thunk": "^2.1.0",
     "axios": "^0.19.2",
     "bootstrap": "^4.3.1",
+    "dayjs": "^1.11.13",
     "dotenv": "^8.2.0",
     "js-cookie": "^2.2.1",
-    "moment": "^2.24.0",
-    "react": "^16.10.2",
+    "react": "^18.3.1",
     "react-cookie": "^4.0.3",
-    "react-dom": "^16.10.2",
+    "react-dom": "^18.3.1",
     "react-fontawesome": "^1.6.1",
-    "react-moment": "^0.9.7",
-    "react-redux": "^7.1.1",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
-    "react-session-hook": "^2.0.1",
+    "react-redux": "^8.1.2",
+    "react-router-dom": "^6.30.0",
+    "react-scripts": "^5.0.1",
     "reactjs-popup": "^1.5.0",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0",
-    "typescript": "^3.7.0-beta"
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "./node_modules/.bin/react-scripts start",
-    "build": "./node_modules/.bin/react-scripts build",
-    "test": "./node_modules/.bin/react-scripts test",
-    "eject": "./node_modules/.bin/react-scripts eject"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -53,6 +50,7 @@
     ]
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.11.2"
+    "@fortawesome/fontawesome-free": "^5.11.2",
+    "typescript": "^4.9.5"
   }
 }
