--- a/front_student/package.json
+++ b/front_student/package.json
@@ -7,26 +7,27 @@
     "@types/jest": "24.0.18",
     "@types/js-cookie": "^2.2.4",
     "@types/node": "12.7.12",
-    "@types/react": "16.9.5",
-    "@types/react-dom": "16.9.1",
-    "@types/react-redux": "^7.1.4",
+    "@types/react": "^18.3.20",
+    "@types/react-dom": "^18.3.5",
+    "@types/react-redux": "^7.1.34",
     "@types/react-router-dom": "^5.1.0",
     "@types/redux-thunk": "^2.1.0",
-    "axios": "^0.19.2",
+    "axios": "^1.8.4",
     "bootstrap": "^4.3.1",
     "dayjs": "^1.11.13",
-    "dotenv": "^8.2.0",
+    "dotenv": "^8.6.0",
     "js-cookie": "^2.2.1",
     "react": "^18.3.1",
-    "react-cookie": "^4.0.3",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.3.1",
-    "react-fontawesome": "^1.6.1",
+    "react-fontawesome": "^1.7.1",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.30.0",
     "react-scripts": "^5.0.1",
-    "reactjs-popup": "^1.5.0",
-    "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0"
+    "reactjs-popup": "^2.0.6",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,7 +51,6 @@
     ]
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.11.2",
-    "typescript": "^4.9.5"
+    "@fortawesome/fontawesome-free": "^5.15.4"
   }
 }
