--- a/front_student/package.json
+++ b/front_student/package.json
@@ -3,30 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/dotenv": "^8.2.0",
-    "@types/jest": "24.0.18",
-    "@types/js-cookie": "^2.2.4",
-    "@types/node": "12.7.12",
-    "@types/react": "^18.3.20",
-    "@types/react-dom": "^18.3.5",
+    "@reduxjs/toolkit": "^2.6.1",
+    "@types/dotenv": "^8.2.3",
+    "@types/jest": "29.5.14",
+    "@types/js-cookie": "^3.0.6",
+    "@types/node": "^22.13.14",
+    "@types/react": "^19.0.12",
+    "@types/react-dom": "^19.0.4",
     "@types/react-redux": "^7.1.34",
-    "@types/react-router-dom": "^5.1.0",
-    "@types/redux-thunk": "^2.1.0",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.8.4",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^5.3.3",
     "dayjs": "^1.11.13",
-    "dotenv": "^8.6.0",
-    "js-cookie": "^2.2.1",
-    "react": "^18.3.1",
-    "react-cookie": "^4.1.1",
-    "react-dom": "^18.3.1",
+    "dotenv": "^16.4.7",
+    "js-cookie": "^3.0.5",
+    "react": "^19.1.0",
+    "react-cookie": "^8.0.1",
+    "react-dom": "^19.1.0",
     "react-fontawesome": "^1.7.1",
-    "react-redux": "^8.1.2",
-    "react-router-dom": "^6.30.0",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.4.1",
     "react-scripts": "^5.0.1",
     "reactjs-popup": "^2.0.6",
-    "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "typescript": "^4.9.5"
   },
   "scripts": {
@@ -51,6 +51,8 @@
     ]
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.4"
+    "@fortawesome/fontawesome-free": "^6.7.2",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0"
   }
 }
