--- a/back_student/package.json
+++ b/back_student/package.json
@@ -1,58 +1,63 @@
 {
-   "name": "API_CLIENT_BANK",
-   "version": "0.0.1",
-   "description": "Awesome project developed with TypeORM.",
-   "devDependencies": {
-      "@types/jest": "^24.0.20",
-      "@types/node": "^8.0.29",
-      "ts-jest": "^24.1.0",
-      "ts-node": "3.3.0",
-      "typescript": "3.3.3333"
-   },
-   "dependencies": {
-      "@sentry/node": "5.7.1",
-      "@types/bcryptjs": "^2.4.2",
-      "@types/body-parser": "^1.17.1",
-      "@types/cors": "^2.8.6",
-      "@types/helmet": "^0.0.44",
-      "@types/jsonwebtoken": "^8.3.5",
-      "@types/supertest": "^2.0.8",
-      "@types/swagger-jsdoc": "^3.0.2",
-      "bcryptjs": "^2.4.3",
-      "body-parser": "^1.19.0",
-      "class-transformer": "^0.2.3",
-      "class-validator": "^0.10.2",
-      "cors": "^2.8.5",
-      "dotenv": "^8.2.0",
-      "express": "^4.15.4",
-      "helmet": "^3.21.2",
-      "jest": "^24.9.0",
-      "jsonwebtoken": "^8.5.1",
-      "morgan": "^1.9.1",
-      "mysql": "^2.17.1",
-      "prettier": "^1.18.2",
-      "reflect-metadata": "^0.1.10",
-      "sqlite3": "^4.0.3",
-      "supertest": "^4.0.2",
-      "swagger-jsdoc": "^3.4.0",
-      "swagger-stats": "^0.95.11",
-      "swagger-ui-express": "^4.1.2",
-      "ts-node-dev": "^1.0.0-pre.43",
-      "tsc-watch": "^4.1.0",
-      "tslint": "^5.20.0",
-      "tslint-config-prettier": "^1.18.0",
-      "tslint-eslint-rules": "^5.4.0",
-      "tslint-plugin-prettier": "^2.0.1",
-      "typeorm": "0.2.20"
-   },
-   "scripts": {
-      "tsc": "tsc",
-      "start": "set debug=* && ts-node-dev --respawn --inspect --transpileOnly ./src/index.ts",
-      "prod": "tsc && node ./build/index.js",
-      "schema:drop": "ts-node ./node_modules/typeorm/cli.js schema:drop",
-      "schema:sync": "ts-node ./node_modules/typeorm/cli.js schema:sync",
-      "migration:run": "ts-node ./node_modules/typeorm/cli.js migration:run",
-      "test": "jest --maxWorkers=1 --verbose=true",
-      "migration:start": "yarn schema:drop && yarn schema:sync && yarn migration:run"
-   }
+  "name": "API_CLIENT_BANK",
+  "version": "0.0.1",
+  "description": "Awesome project developed with TypeORM.",
+  "devDependencies": {
+    "@types/express": "^5.0.1",
+    "@types/jest": "^29.5.14",
+    "@types/morgan": "^1.9.9",
+    "@types/node": "^22.13.16",
+    "@types/swagger-stats": "^0.95.11",
+    "@types/swagger-ui-express": "^4.1.8",
+    "@typescript-eslint/eslint-plugin": "^8.29.0",
+    "@typescript-eslint/parser": "^8.29.0",
+    "eslint": "^9.23.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-prettier": "^5.2.5",
+    "ts-jest": "^29.3.1",
+    "ts-node": "10.9.2",
+    "typescript": "5.8.2"
+  },
+  "dependencies": {
+    "@sentry/node": "9.10.1",
+    "@types/bcryptjs": "^3.0.0",
+    "@types/body-parser": "^1.19.5",
+    "@types/cors": "^2.8.17",
+    "@types/helmet": "^4.0.0",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/supertest": "^6.0.3",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "bcryptjs": "^3.0.2",
+    "body-parser": "^2.2.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^5.1.0",
+    "helmet": "^8.1.0",
+    "jest": "^29.7.0",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
+    "mysql2": "^3.14.0",
+    "prettier": "^3.5.3",
+    "reflect-metadata": "^0.2.2",
+    "sqlite3": "^5.1.7",
+    "supertest": "^7.1.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-stats": "^0.99.7",
+    "swagger-ui-express": "^5.0.1",
+    "ts-node-dev": "^2.0.0",
+    "tsc-watch": "^6.2.1",
+    "typeorm": "^0.3.21"
+  },
+  "scripts": {
+    "tsc": "tsc",
+    "start": "set debug=* && ts-node-dev --respawn --transpile-only ./src/index.ts",
+    "prod": "tsc && node ./build/index.js",
+    "schema:drop": "ts-node ./node_modules/typeorm/cli.js schema:drop",
+    "schema:sync": "ts-node ./node_modules/typeorm/cli.js schema:sync",
+    "migration:run": "ts-node ./node_modules/typeorm/cli.js migration:run",
+    "test": "jest --maxWorkers=1 --verbose=true",
+    "migration:start": "yarn schema:drop && yarn schema:sync && yarn migration:run"
+  }
 }
