--- a/back_student/package.json
+++ b/back_student/package.json
@@ -19,6 +19,8 @@
     "typescript": "5.8.2"
   },
   "dependencies": {
+    "@logtail/node": "^0.5.2",
+    "@logtail/winston": "^0.5.2",
     "@sentry/node": "9.10.1",
     "@types/bcryptjs": "^3.0.0",
     "@types/body-parser": "^1.19.5",
@@ -48,7 +50,8 @@
     "swagger-ui-express": "^5.0.1",
     "ts-node-dev": "^2.0.0",
     "tsc-watch": "^6.2.1",
-    "typeorm": "^0.3.21"
+    "typeorm": "^0.3.21",
+    "winston": "^3.17.0"
   },
   "scripts": {
     "tsc": "tsc",
