fix docker compose dev

--- a/docker/dev/docker-compose.yml
+++ b/docker/dev/docker-compose.yml
@@ -21,8 +21,8 @@ services:
     environment:
       NODE_ENV: ${NODE_ENV}
       DB_HOST: ${DB_HOST}
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      DB_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      DB_DATABASE: ${MYSQL_DATABASE}
       WINSTON_SOURCE_TOKEN: ${WINSTON_SOURCE_TOKEN}
       WINSTON_INVESTING_HOST: ${WINSTON_INVESTING_HOST}
     ports:
