--- a/back_student/package.json
+++ b/back_student/package.json
@@ -19,6 +19,8 @@
     "typescript": "5.8.2"
   },
   "dependencies": {
+    "@logtail/node": "^0.5.2",
+    "@logtail/winston": "^0.5.2",
     "@sentry/node": "9.10.1",
     "@types/bcryptjs": "^3.0.0",
     "@types/body-parser": "^1.19.5",
@@ -37,7 +39,6 @@
     "helmet": "^8.1.0",
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.0",
     "mysql2": "^3.14.0",
     "prettier": "^3.5.3",
     "reflect-metadata": "^0.2.2",
@@ -48,7 +49,8 @@
     "swagger-ui-express": "^5.0.1",
     "ts-node-dev": "^2.0.0",
     "tsc-watch": "^6.2.1",
-    "typeorm": "^0.3.21"
+    "typeorm": "^0.3.21",
+    "winston": "^3.17.0"
   },
   "scripts": {
     "tsc": "tsc",
