--- a/docker/prod/docker-compose.yml
+++ b/docker/prod/docker-compose.yml
@@ -37,14 +37,18 @@ services:
     image: nexus-repository.axel-martin.fr/t-nsa-800/front_student:latest
     restart: unless-stopped
     ports:
-      - "8080:80"
+      - "80:80"
+      - "443:443"
     depends_on:
       - api
     labels:
       - "com.centurylinklabs.watchtower.enable=true"
     networks:
       - backend
-
+    volumes:
+      - /root/utils/nginx.conf:/etc/nginx/nginx.conf:ro
+      - /root/certs/cert.pem:/run/secrets/ssl_cert:ro
+      - /root/certs/key.pem:/run/secrets/ssl_key:ro
 volumes:
   db_data:
 
