--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,7 @@ jobs:
       - name: Build and tag Frontend image
         run: |
           docker build \
+            --no-cache \
             --build-arg REACT_APP_API_URL=${{ secrets.REACT_APP_API_URL }} \
             -t ${{ secrets.NEXUS_DOMAIN }}/${{ secrets.NEXUS_REPOSITORY }}/front_student:${{ github.sha }} \
             -t ${{ secrets.NEXUS_DOMAIN }}/${{ secrets.NEXUS_REPOSITORY }}/front_student:latest \
